--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 __pycache__/
 *.py[cod]
 *$py.class
+.DS_STORE
+.idea
+__pycache__
 
 # C extensions
 *.so
@@ -127,3 +130,5 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+/test.db
+/src/test.db
