--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python-dotenv = "^0.19.0"
 marshmallow = "^3.13.0"
 SQLAlchemy = "^1.4.23"
 PyJWT = "^2.1.0"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 
