--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,11 @@ marshmallow = "^3.13.0"
 SQLAlchemy = "^1.4.23"
 PyJWT = "^2.1.0"
 gunicorn = "^20.1.0"
+requests = "^2.26.0"
 
 [tool.poetry.dev-dependencies]
+pytest-dotenv = "^0.5.2"
+pytest = "^6.2.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
