--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ SQLAlchemy = "^1.4.23"
 PyJWT = "^2.1.0"
 gunicorn = "^20.1.0"
 requests = "^2.26.0"
+psycopg = "^3.0b1"
 
 [tool.poetry.dev-dependencies]
 pytest-dotenv = "^0.5.2"
